[package]
authors = ["Víctor Jáquez vjaquez@igalia.com"]
name = "gl2md"
version = "0.1.0"
edition = "2018"

[dependencies]
mysql = "*"
mysql_common = { version = "*", default-features = false, features = ["time"]}
pandoc = "0.8"
serde = "1.0.216"
time = { version = "0.3", features = ["macros", "formatting"] }

[[bin]]
name = "gl2md"
path = "src/main.rs"

[[bin]]
name = "showpost"
path = "src/showpost.rs"

[[bin]]
name = "comments2json"
path = "src/comment.rs"
